Do not ignore CD drives with blank media

Extend the special casing of CD drives in should_drive_be_ignored() to also
cover blank media. Otherwise we lose the drive for the blank media volume, and
with it the possibility to eject it.

Bug: https://bugzilla.gnome.org/show_bug.cgi?id=598554
Bug-Ubuntu: https://launchpad.net/bugs/425104